# plaquette

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codestyle.yml  docs.yml  literature_test.yml  pypi.yml  tests.yml
docs/: .gitignore  Makefile  advanced.rst  conf.py  glossary.rst  index.rst  introduction.rst  qs_threshold.json  quickstart.rst  references.bib  references.rst  todo.rst
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/_templates/apidoc/: module.rst_t  package.rst_t  toc.rst_t
docs/advanced/circuits/: index.rst
docs/advanced/codes/: index.rst
docs/advanced/errors/: index.rst  spem.csv
docs/advanced/frontend/: index.rst  surface17_tutorial.toml
docs/advanced/viz/: index.rst
docs/dev/: index.rst  new_backend.rst
docs/qec_tutorials/: index.rst
docs/qec_tutorials/decoding/: decoding.ipynb  decoding.rst
docs/qec_tutorials/intro_and_codes/: intro_and_codes.ipynb  intro_and_codes.rst
docs/ref/: circuits.rst  errordata.rst  frontend.rst
examples/: README.rst  errors.py  frontend.py  quickstart.py
src/: .gitignore
src/plaquette/: __init__.py  __main__.py  pauli.py
src/plaquette/circuit/: __init__.py  generator.py  openqasm.py
src/plaquette/codes/: __init__.py  graph.py  latticebase.py  latticeinstances.py
src/plaquette/decoders/: __init__.py  decoderbase.py  fusionblossom.py  interfaces.py  matching.py  unionfind_decoder.py  unionfind_erasure.py  unionfind_interfaces.py
src/plaquette/device/: __init__.py  _circuitsim.py  _stimsim.py
src/plaquette/errors/: __init__.py
src/plaquette/frontend/: __init__.py  schemas.py
src/plaquette/simulator/: __init__.py  circuitsim.py  stimsim.py
src/plaquette/syngraph/: __init__.py  weights.py
src/plaquette/visualizer/: __init__.py
tests/: conftest.py  nickerson_thesis_config.toml  test_regression_against_golden_standard.py
tests/integrationtests/: codes_clifford_test.py  errors_codes_test.py  generator_test.py  lattices_codes_tests.py
tests/unittests/: functional_pauli_test.py  test_decoders.py
tests/unittests/circuit/: circuit_inputs.txt  circuit_inputs_with_unsupported.txt  circuit_test.py  expected_qasm_outputs_with_unsupported.txt  openqasm_test.py
tests/unittests/codes/: latticeinstances_test.py  test_codes.py
tests/unittests/decoders/: test_decoderbase.py
tests/unittests/device/: devicebase_test.py  simulatorbase_test.py
tests/unittests/device/sample_circuits/: sample_circuits.yaml
tests/unittests/errors/: errorsui_test.py
tests/unittests/frontend/: GateErrors.csv  SpEM.csv  config_test.py  extensive.toml  rep_code_5.txt  surf17_minimal.toml  surface17_config.toml  surface17_gate.toml  surface17_simple.toml  surface17_tutorial.toml  surface17_user.toml
tests/unittests/simulator/: simulatorbase_test.py
tests/unittests/simulator/sample_circuits/: parametrized_circuits.yaml  test_circuits.yaml
