[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plaquette"
authors = [
    {name="QC Design GmbH", email="software@qc.design"}
]
description = "An all-encompassing quantum error-correction software package"
dynamic = ["version", "readme", "dependencies"]
requires-python = ">=3.10"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
keywords = ["Quantum error correction", "qec", "quantum computing", "fault tolerance"]

[project.urls]
"Homepage" = "https://docs.plaquette.design"
"Bug Tracker" = "https://github.com/qc-design/plaquette/issues"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
allow_redefinition = true
plugins = ["pydantic.mypy"]

[tool.ruff]
select = ["B", "D", "E", "F", "I"]
ignore = ["B905"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[project.entry-points."plaquette.device"]
clifford = "plaquette.device._circuitsim:CircuitSimulator"
stim = "plaquette.device._stimsim:StimSimulator"

[tool.ruff.isort]
known-first-party = ["plaquette", "plaquette_graph", "plaquette_unionfind"]
order-by-type = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"src/plaquette/decoders/__init__.py" = ["F401"]
"tests/*" = ["D"]
"lattice.py" = ["D", "E"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "plaquette.__version__"}
readme = {file = ["README.rst"]}
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
addopts = '--doctest-modules --doctest-glob="*.rst" --strict-markers --ignore=examples --ignore="src/plaquette/frontend" --ignore="src/plaquette/visualizer" --ignore-glob="docs/**/*.py"'
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
